--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div> -->
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Beranda</a></li>
-                <li><a href="views/wudhu-guide.html">Panduan Wudhu</a></li>
-                <li><a href="views/shalat-guide.html">Panduan Shalat</a></li>
+                <li><a href="views/wudhu-guide.html">Wudhu</a></li>
+                <li><a href="views/shalat-guide.html">Shalat</a></li>
                 <li><a href="views/about.html">Tentang</a></li>
             </ul>
             <!-- <div class="hamburger">
